k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastml-serve
  labels:
    name: fastml-serve
    environment: development
